test_data/neg/ss/655293/Windows/655293.acc_simp.rtf
>655293
MLSPSQSLQYQKESVERALTCANCGQKLHVLEVHVCEYCCAELMSDPNSSMYEEEDDE
EEEEEEEEEEEEEEEEEEMEBEEMEEEMEEEEMMEBEEMEEEMEEEEEEEEEEEEEEE
